# volt

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  simulator.py
dashboard/: server.py
dashboard/static/: app.js  index.html  style.css
examples/ble_beacon/: main.py
examples/multi_protocol/: main.py
examples/ota_update/: main.py
examples/smart_switch/: main.py
examples/soil_monitor/: main.py
examples/temperature_logger/: main.py
tests/: conftest.py  test_captive_portal.py  test_config.py  test_connectivity.py  test_ota.py  test_router.py  test_scheduler.py  test_sensors.py  test_state.py  test_telemetry.py
volt/: __init__.py  app.py  ble.py  captive_portal.py  config.py  exceptions.py  health.py  http_server.py  ota.py  router.py  scheduler.py  state.py  telemetry.py  websocket.py
volt/connectivity/: __init__.py  mqtt.py  wifi.py
volt/sensors/: __init__.py  base.py  bme280.py  dht22.py  soil_moisture.py  ultrasonic.py
volt_cli/: __init__.py  cli.py  dashboard.py  flash.py  monitor.py  ota.py  scan.py  shell.py
