[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "volt-iot"
version = "0.1.0"
description = "FastAPI-inspired IoT framework for MicroPython"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
    "click>=8.0",
    "pyserial>=3.5",
    "requests>=2.28",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
volt = "volt_cli.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["volt*", "volt_cli*", "dashboard*"]
